Addition of challenges Distinctly Colored Nodes, Presidential Gala, and Palindrome Builder. Rename project to HackerRank.CSharp.

--- a/HackerRank.CSharp/HackerRank.CSharp.csproj
+++ b/HackerRank.CSharp/HackerRank.CSharp.csproj
@@ -7,11 +7,12 @@
     <ProjectGuid>{84B95740-5D1D-42D2-B78F-9FD2350A7C17}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HiddenMessage</RootNamespace>
-    <AssemblyName>HiddenMessage</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>SCW.HackerRank</RootNamespace>
+    <AssemblyName>SCW.HackerRank</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -22,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -43,6 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HiddenMessage.cs" />
+    <Compile Include="DistinctlyColoredNodes.cs" />
+    <Compile Include="PalindromeBuilder.cs" />
+    <Compile Include="PresidentialGala.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -50,7 +56,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TestCase.txt" />
+    <Content Include="DistinctlyColoredNodesTest.txt" />
+    <Content Include="PalindromeBuilder.txt" />
+    <Content Include="PresidentialGalaTest.txt" />
+    <Content Include="HiddenMessageTest.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
